{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "21e9e81f-b480-f6dd-4bc8-fa6a02c1f3d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:183295448149:internet-gateway/igw-015120ea6bd9fe6ed",
            "id": "igw-015120ea6bd9fe6ed",
            "owner_id": "183295448149",
            "tags": {
              "Name": "terraform-ecs-ecr-igw"
            },
            "tags_all": {
              "Name": "terraform-ecs-ecr-igw"
            },
            "vpc_id": "vpc-0156d2e8c35d361c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015120ea6bd9fe6ed",
            "id": "r-rtb-0e62391a5f2f326481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e62391a5f2f32648",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:183295448149:route-table/rtb-0e62391a5f2f32648",
            "id": "rtb-0e62391a5f2f32648",
            "owner_id": "183295448149",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-ecs-ecr-rt"
            },
            "tags_all": {
              "Name": "terraform-ecs-ecr-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0156d2e8c35d361c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f08d13a04cf44fb4",
            "route_table_id": "rtb-0e62391a5f2f32648",
            "subnet_id": "subnet-0fcfdf8a877dbe94c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:183295448149:security-group/sg-0c62ec92784ea4b8f",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c62ec92784ea4b8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ecs-ecr-sg",
            "name_prefix": "",
            "owner_id": "183295448149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ecs-ecr-sg"
            },
            "tags_all": {
              "Name": "terraform-ecs-ecr-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0156d2e8c35d361c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:183295448149:subnet/subnet-0fcfdf8a877dbe94c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcfdf8a877dbe94c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183295448149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ecs-ecr-subnet"
            },
            "tags_all": {
              "Name": "terraform-ecs-ecr-subnet"
            },
            "vpc_id": "vpc-0156d2e8c35d361c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:183295448149:vpc/vpc-0156d2e8c35d361c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06084e1cb7f666de0",
            "default_route_table_id": "rtb-03edad7024700d8ef",
            "default_security_group_id": "sg-0479b6dbbc6bdefd4",
            "dhcp_options_id": "dopt-05686a8d74e46290d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0156d2e8c35d361c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03edad7024700d8ef",
            "owner_id": "183295448149",
            "tags": {
              "Name": "terraform-ecs-ecr-vpc"
            },
            "tags_all": {
              "Name": "terraform-ecs-ecr-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}